/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation "org.jetbrains:annotations:24.0.0"
    implementation "org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT"
}

group = 'org.mose.command'
version = '1.2.3'
description = 'bukkit-command-system'
java.sourceCompatibility = JavaVersion.VERSION_17

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
